# Changelog – New Standard Findings

Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [Unreleased]
### Fixed
- Zusätzliche Feld-Aliasse für Bestelltexte ergänzt, damit aktualisierte Shopguide-Findings-Dateien ihre Bestelllisten korrekt darstellen.

## [1.3.2] – 2025-10-03
### Added
- Automatisches Polling überwacht die ausgewählte Findings-Datei alle fünf Sekunden und lädt aktualisierte Inhalte sofort nach.

## [1.3.1] – 2025-10-02
### Changed
- Routine-Editor speichert Eingaben in Text- und Aspen-Blöcken sofort im lokalen Zustand und aktualisiert deren Darstellung auch nach dem Neuladen.
- Custom-Block-Renderer kennzeichnet Aspen-Felder mit einer eigenen CSS-Klasse und liefert detailliertere Konsolenmeldungen pro Blocktyp.

## [1.3.0] – 2025-10-02
### Added
- Routine-Editor mit Overlay, Tabs und Drag-and-Drop-Blöcken ermöglicht das Zusammenstellen von Findings-, Actions-, Routine- und Nonroutine-Textbausteinen inklusive Aspen-Vorschau und Mehrfachausgaben.
- Preset-Verwaltung speichert eigene Layouts samt Favoriten für häufig verwendete Parameter lokal und macht sie zwischen Sitzungen verfügbar.
- Hintergrundbeobachtung synchronisiert Inhalte automatisch, sobald Aspen-/Board-Daten, Findings-Datei oder Zustände in anderen Tabs aktualisiert werden.

## [1.2.5] – 2025-09-26
### Changed
- Modulmanifest aktualisiert und die Version auf 1.2.5 erhöht.

## [1.2.4] – 2025-09-26
### Changed
- Kopierfunktion der Bestellliste gibt nur noch die extrahierten Teilenummern zurück, sodass Mengenangaben nicht mehr in andere Anwendungen übernommen werden.

## [1.2.3] – 2025-09-29
### Added
- Neuer Button zum Auswählen einer Findings-JSON; die Auswahl wird eingelesen, gespeichert und der Dateipfad im Local Storage hinterlegt.
- Kontextbereich zeigt nun den aktuell verwendeten Findings-Dateipfad an.